handling Dark mode issues

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -49,7 +49,7 @@
     --error: 10 100% 86%;
   }
 
-  [data-theme='dark'] {
+  /* [data-theme='dark'] {
     --background: 0 0% 0%;
     --foreground: 210 40% 98%;
 
@@ -81,8 +81,19 @@
     --success: 196 100% 14%;
     --warning: 34 51% 25%;
     --error: 10 39% 43%;
-  }
+  } */
 }
+
+:root {
+  color-scheme: light !important;
+}
+
+
+html, body {
+  forced-color-adjust: none !important;
+}
+
+
 
 @layer base {
   * {
@@ -93,14 +104,14 @@
   }
 }
 
-html {
+/* html {
   opacity: 0;
 }
 
 html[data-theme='dark'],
 html[data-theme='light'] {
   opacity: initial;
-}
+} */
 
 html, body {
   font-family: 'Geist', sans-serif;
